Moved LotSelection to pages folder, fixed overflow (took 50px off height for footer)

--- a/client/frontend/src/stylesheets/LotSelection.css
+++ b/client/frontend/src/stylesheets/LotSelection.css
@@ -1,6 +1,6 @@
 .main-container {
     display: flex;
-    height: calc(100vh - 50px); /* Full height minus header */
+    height: calc(100vh - 100px); /* Full height minus header/footer */
   }
   
   .map-container {
